Fix ui-popup li height in elemental/custom.css
The default line height of 4px in the elemental theme is squashing the ui-popup used for the evohome popup menu.
It looks bad as the icons are clipped and the selection is difficult to use on a touch device.
Restore the original height purely for li child elements of ui-popup class.

--- a/www/styles/elemental/custom.css
+++ b/www/styles/elemental/custom.css
@@ -132,6 +132,10 @@ li {
 	line-height: 4px;
 }
 
+.ui-popup li {
+	line-height: 20px;
+}
+
 .navbar .nav .dropdown-toggle .caret {
 	margin-top: 0px;
 }
